# vts-registry

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
registry/: .gitignore  CMakeLists.txt  Makefile
registry/debian/: .gitignore  changelog  rules
registry/debian.internal/: .gitignore  README  changelog  control  ctt-vadstena-registry.install  ctt-vts-registry.install  rules
registry/debian.jessie/: .gitignore  README  changelog  control
registry/debian.seznam.cz/: .gitignore  changelog  control  ctt-vts-seznamcz-registry.copyright  ctt-vts-seznamcz-registry.install  rules
registry/debian.xenial/: .gitignore  changelog
registry/debian.zesty/: changelog  control  rules
registry/debian/templates/: control.template
registry/debian/wheezy/: control  control.footer
registry/registry/: CMakeLists.txt  bodies.json  boundLayers.json  boundlayers.json  credits.json  referenceframes.json  srs.json
